--- a/easter-cz.html
+++ b/easter-cz.html
@@ -138,7 +138,7 @@
 
                         <!-- MARKETING BANNER EASTER DISPLAY 1 --> 
                         <tr>
-                            <td>
+                            <td align="center">
                                 <img src="https://iili.io/32rYn2e.png" alt="Velikonoční stojan 1" style="max-width: 600px">          
                             </td>
                         </tr>
@@ -167,7 +167,7 @@
 
                         <!-- MARKETING BANNER EASTER DISPLAY 2 --> 
                         <tr>
-                            <td>
+                            <td align="center">
                                 <img src="https://iili.io/32rYVQp.png" alt="Velikonční stojan 2" style="max-width: 600px">           
                             </td>
                         </tr>
@@ -298,7 +298,7 @@
                         </tr>
 
                         <!-- GIFT BAGS --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center; padding:0px 30px;">
                                     <tbody>
@@ -545,7 +545,7 @@
                         </tr>
 
                         <!-- BAKING UTENSILS --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1058,7 +1058,7 @@
                         </tr>
                         
                         <!-- BAKING UTENSILS --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1190,7 +1190,7 @@
                         </tr>
 
                         <!-- NAPKINS --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -1761,7 +1761,7 @@
                         </tr>
 
                         <!-- SPLISH --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -2040,7 +2040,7 @@
                         </tr>
 
                         <!-- SOAP --> 
-                        <tr>
+                        <tr align="center">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
