--- a/easter-cz.html
+++ b/easter-cz.html
@@ -298,7 +298,7 @@
                         </tr>
 
                         <!-- GIFT BAGS --> 
-                        <tr align="center">
+                        <tr align="center" style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center; padding:0px 30px;">
                                     <tbody>
@@ -545,7 +545,7 @@
                         </tr>
 
                         <!-- BAKING UTENSILS --> 
-                        <tr align="center">
+                        <tr align="center" style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1058,7 +1058,7 @@
                         </tr>
                         
                         <!-- BAKING UTENSILS --> 
-                        <tr align="center">
+                        <tr align="center"  style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1190,7 +1190,7 @@
                         </tr>
 
                         <!-- NAPKINS --> 
-                        <tr align="center">
+                        <tr align="center" style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -1761,7 +1761,7 @@
                         </tr>
 
                         <!-- SPLISH --> 
-                        <tr align="center">
+                        <tr align="center" style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -2040,7 +2040,7 @@
                         </tr>
 
                         <!-- SOAP --> 
-                        <tr align="center">
+                        <tr align="center" style="max-width: 600px;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
