--- a/easter-cz.html
+++ b/easter-cz.html
@@ -49,7 +49,7 @@
                                     margin:6px; 
                                     font-size:16px; 
                                     font-family:Georgia,serif;
-                                "> protože život je jedna velká oslava</h2>
+                                ">jaro v plném rozkvětu, radost na každém kroku!</h2>
                             </td>
                         </tr>
 
@@ -2497,7 +2497,7 @@
                                         font-style:italic; 
                                         color:#777;
                                 ">
-                                    * Všechny uvedené ceny jsou bez DPH a platí k datu 3. března. 
+                                    * Všechny uvedené ceny jsou bez DPH a platí k datu 7. března. 
                                 </p>
                                 <p style="margin:0;"> Pokud už nechcete žádné nabídky dostávat,
                                     <a href="mailto:jzizlavska@alvarak.cz?
