--- a/easter-sk.html
+++ b/easter-sk.html
@@ -25,7 +25,7 @@
                                 font-size:12px; 
                                 font-family:Georgia,serif;
                             "> Ak sa tento e-mail nezobrazuje správne,
-                            <a href="https://offersalvarak.github.io/easter_2025/easter-cz.html" style="color: #285eb5; text-decoration: underline;">kliknite sem pre zobrazenie webovej verzie</a>
+                            <a href="https://offersalvarak.github.io/easter_2025/easter-sk.html" style="color: #285eb5; text-decoration: underline;">kliknite sem pre zobrazenie webovej verzie</a>
                             </p>
                         </tr>
 
@@ -142,7 +142,7 @@
                         <!-- MARKETING BANNER EASTER DISPLAY 1 --> 
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYn2e.png" alt="Veľkonočný stojan 1" width="600px" style="width: 100%">          
+                                <img src="https://iili.io/32rYn2e.png" alt="Veľkonočný stojan 1" width="600px">          
                             </td>
                         </tr>
 
@@ -171,7 +171,7 @@
                         <!-- MARKETING BANNER EASTER DISPLAY 2 --> 
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYVQp.png" alt="Veľkonočný stojan 2"  width="600px" style="max-width: 100%">           
+                                <img src="https://iili.io/32rYVQp.png" alt="Veľkonočný stojan 2"  width="600px">           
                             </td>
                         </tr>
 
