--- a/easter-cz.html
+++ b/easter-cz.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaro plné radosti! Velikonoční novinky pro váš obchod</title>
 </p>
-<table width="600px" border="0" cellspacing="0" cellpadding="0" style="padding:20px 0; margin: 0 auto;">
+<table width="600px" border="0" cellspacing="0" cellpadding="0" align="center" style="padding:20px 0; margin: 0 auto;">
     <tbody>
         <tr>
             <td align="center">
@@ -140,7 +140,7 @@
                         <!-- MARKETING BANNER EASTER DISPLAY 1 --> 
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYn2e.png" alt="Velikonoční stojan 1" style="width: 100%">          
+                                <img src="https://iili.io/32rYn2e.png" alt="Velikonoční stojan 1" style="width: 100%; max-width: 600px; height: auto; display: block;">          
                             </td>
                         </tr>
 
@@ -169,7 +169,7 @@
                         <!-- MARKETING BANNER EASTER DISPLAY 2 --> 
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYVQp.png" alt="Velikonční stojan 2" style="max-width: 100%">           
+                                <img src="https://iili.io/32rYVQp.png" alt="Velikonční stojan 2" style="max-width: 100%; max-width: 600px; height: auto; display: block;">           
                             </td>
                         </tr>
 
@@ -197,7 +197,7 @@
                         <!-- EASTER DISPLAY SMALL --> 
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYQyb.png" alt="Velikonoční stojánek malý" style="max-width: 100%">       
+                                <img src="https://iili.io/32rYQyb.png" alt="Velikonoční stojánek malý" style="max-width: 100%; max-width: 600px; height: auto; display: block;">       
                             </td>
                         </tr>
 
@@ -226,8 +226,8 @@
                         <!-- EASTER DISPLAY VARIATIONS -->
                         <tr>
                             <td align="center">
-                                <img src="https://iili.io/32rYDwx.png" alt="Velikonoční stojan 3" style="max-width: 100%">
-                                <img src="https://iili.io/32rYtuj.png" alt="Velikonoční stojan 4" style="max-width: 100%">           
+                                <img src="https://iili.io/32rYDwx.png" alt="Velikonoční stojan 3" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
+                                <img src="https://iili.io/32rYtuj.png" alt="Velikonoční stojan 4" style="max-width: 100%; max-width: 600px; height: auto; display: block;">           
                             </td>
                         </tr>
 
@@ -299,7 +299,7 @@
                         </tr>
 
                         <!-- GIFT BAGS --> 
-                        <tr align="center" style="max-width: 100%;">
+                        <tr align="center" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" align="center" border="0" cellspacing="10px" cellpadding="0" style="text-align:center; padding:0px 30px;">
                                     <tbody>
@@ -546,7 +546,7 @@
                         </tr>
 
                         <!-- BAKING UTENSILS --> 
-                        <tr align="center" style="max-width: 100%;">
+                        <tr align="center" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1059,7 +1059,7 @@
                         </tr>
                         
                         <!-- BAKING UTENSILS --> 
-                        <tr align="center"  style="max-width: 100%;">
+                        <tr align="center"  style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>
@@ -1191,7 +1191,7 @@
                         </tr>
 
                         <!-- NAPKINS --> 
-                        <tr align="center" style="max-width: 100%;">
+                        <tr align="center" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -1762,7 +1762,7 @@
                         </tr>
 
                         <!-- SPLISH --> 
-                        <tr align="center" style="max-width: 100%;">
+                        <tr align="center" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
@@ -2041,7 +2041,7 @@
                         </tr>
 
                         <!-- SOAP --> 
-                        <tr align="center" style="max-width: 100%;">
+                        <tr align="center" style="max-width: 100%; max-width: 600px; height: auto; display: block;">
                             <td>
                                 <table width="100%" border="0" cellspacing="10px" cellpadding="0" style="text-align:center;">
                                     <tbody>                                     
