--- a/easter-sk.html
+++ b/easter-sk.html
@@ -133,7 +133,7 @@
                                     color:#000000;
                                 ">
                                     <b>  Stojan s pekárskymi a cukrárskymi produktmi </b> – obsahuje formy na pečenie, 
-                                    košíčky na muffiny, vykrajovátka, cukrárske sáčky a ďalšie 
+                                    košíčky na muffiny, vykrajovátka, cukrárske vrecká a ďalšie 
                                     pomôcky. Cena plne vybaveného stojana: cca 375.50 € bez DPH. <br>
                                 </p>
                             </td>
@@ -1757,8 +1757,8 @@
                                     font-family:Arial, sans-serif; 
                                     color:#000000;
                                 ">
-                                    <b> Přírodní dárky - mýdla, šumivé koule a vonné svíčky </b> <br> 
-                                    Skvělé jako velikonoční dárek nebo voňavý doplněk domova.
+                                    <b> Prírodné darčeky - mydlá, šumivé gule a vonné sviečky </b> <br> 
+                                    Skvelé ako veľkonočný darček alebo voňavý doplnok domova.
                                 </p>
                             </td>
                         </tr>
